	PR tree-optimization/81661 	PR tree-optimization/84117 	* tree-eh.h (rewrite_to_non_trapping_overflow): Declare. 	* tree-eh.c: Include gimplify.h. 	(find_trapping_overflow, replace_trapping_overflow, 	rewrite_to_non_trapping_overflow): New functions. 	* tree-vect-loop.c: Include tree-eh.h. 	(vect_get_loop_niters): Use rewrite_to_non_trapping_overflow. 	* tree-data-ref.c: Include tree-eh.h. 	(get_segment_min_max): Use rewrite_to_non_trapping_overflow.

* gcc.dg/pr81661.c: New test.
	* gfortran.dg/pr84117.f90: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@257284 138bc75d-0d04-0410-961f-82ee72b054a4